--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.27.2",
+    "mobx": "^6.6.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
