--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,11 +10,13 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
     "@types/react": "^17.0.3",
+    "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.27.2",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.4.1",
