--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,18 +7,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^12.6.2",
+    "@types/history": "^4.7.9",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
     "@types/react": "^17.0.3",
     "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.27.2",
+    "history": "^4.10.1",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "typescript": "^4.6.4",
@@ -52,6 +55,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.4",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.3"
   }
 }
