--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,12 +14,14 @@
     "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.6",
     "history": "^4.10.1",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.4",
@@ -55,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^3.1.2",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.11",
