--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.3",
     "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "^17.0.3",
+    "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.6",
@@ -26,6 +27,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.2",
+    "react-infinite-scroller": "^1.2.6",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.4",
     "semantic-ui-css": "^2.4.1",
